a1/brendan_gordon/TEST_PROGRAMS/invalidtype/maxim_gorshkov/prog2.min
# Using a variable which is not declared

var x : int;

print z;
